# ProbeScope

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  qt5.natvis  vcpkg-configuration.json  vcpkg.json
.github/workflows/: windows-build.yml
cmake/: DetectIsVcpkgToolchain.cmake  GenerateBuildInfo.cmake  ImportLibdwarf.cmake  InplaceSetupQasc.cmake  InplaceSetupQmsetup.cmake  Installation.cmake
inc/: acquisitionbuffer.h  acquisitionbufferchannel.h  result.h  typerepresentation.h
inc/expressionevaluator/: bytecode.h  executionstate.h  opcodes.h  optimizer.h  parser.h
inc/models/: watchentrymodel.h
inc/probelib/: consts.h  iprobelib.h  misc.h  result_hack.h
inc/serialization/: workspace.h
lang/: probescope_zh_CN.ts
lang/publish/: lang.qrc
lib/QCustomPlot/: CMakeLists.txt
lib/WatchExprParser/: .gitignore  CMakeLists.txt  example  example2  example3  example4  example5  example6  example8  grammar.js  package.json
lib/WatchExprParser/src/: grammar.json  node-types.json  parser.c
lib/libqtermwidget/: BarePty.h  CMakeLists.txt  Emulation.cpp  HistorySearch.h  KeyboardTranslator.h  Screen.cpp  Screen.h  Session.cpp  Session.h  TerminalDisplay.h  Vt102Emulation.cpp  konsole_wcwidth.cpp  qtermwidget.cpp  qtermwidget.h
lib/libqtermwidget/color-schemes/: qtermwidget_colorschemes.qrc
lib/libqtermwidget/history/: HistoryFile.cpp  HistoryFile.h  HistoryScroll.h  HistoryScrollFile.cpp  HistoryScrollFile.h  HistoryScrollNone.h  HistoryType.h  HistoryTypeFile.cpp  HistoryTypeFile.h  HistoryTypeNone.cpp  HistoryTypeNone.h
lib/libqtermwidget/kb-layouts/: qtermwidget_kblayouts.qrc
lib/libqtermwidget/translations/deploy/: qtermwidget_translations.qrc
plugins/: CMakeLists.txt
plugins/probelib-psprobe/: CMakeLists.txt  availableprobe.cpp  bridge.h  psprobe.cpp  psprobe.h  session.cpp
res/: resource.qrc
res/icons/light/: index.theme
src/: acquisitionbuffer.cpp  acquisitionhub.cpp  acquisitionhub.h  diskbackedstorage.cpp  diskbackedstorage.h  expressionevaluator.cpp  expressionevaluator.h  expressionevaluatorops.h  gdbcontainer.cpp  gdbcontainer.h  gdbmi.cpp  gdbmi.h  gdbreadonlydevice.h  main.cpp  probelibhost.cpp  probelibhost.h  symbolbackend.cpp  symbolbackend.h  test_code.cpp.h  typerepresentation.h  utils.cpp  utils.h  waitsignaldialog.cpp  waitsignaldialog.h  workspacemodel.cpp  workspacemodel.h
src/eventfilters/: firstcolumnfollowresizefilter.h
src/expressionevaluator/: bytecode.cpp  executionstate.cpp  optimizer.cpp  parser.cpp
src/models/: watchentrymodel.cpp
tests/: CMakeLists.txt
tests/test-bytecodevm/: CMakeLists.txt  main.cpp
ui/: plotareaadjustpopup.cpp  plotareaadjustpopup.h  plotareaadjustpopup.ui  plotareapanel.cpp  plotareapanel.h  plotareapanel.ui  probescopewindow.cpp  probescopewindow.h  probescopewindow.ui  selectdevicedialog.cpp  selectdevicedialog.h  selectdevicedialog.ui  selectprobedialog.cpp  selectprobedialog.h  selectprobedialog.ui  symbolpanel.cpp  symbolpanel.h  symbolpanel.ui  uistatebridge.h  watchentrypanel.cpp  watchentrypanel.h  watchentrypanel.ui  welcomebackground.cpp  welcomebackground.h
ui/delegate/: htmldelegate.cpp  htmldelegate.h  plotareacolumndelegate.cpp  plotareacolumndelegate.h  symbolnamedelegate.cpp  symbolnamedelegate.h
ui/plotter/: axistickertimems.cpp  axistickertimems.h
ui/widgets/: elidedlabel.cpp  elidedlabel.h
